--- a/Index.html/aboutme.html
+++ b/Index.html/aboutme.html
@@ -26,7 +26,7 @@
     <li>
         Call me <a href="tel:2311234567">My phone number</a>
     </li>
-    <li>open <a href="https:www.google.com/" target="_blank">Google</a> in a new tab.
+    <li>open <a href="https://www.google.com/" target="_blank">Google</a> in a new tab.
     </li>
  </ul>
 
@@ -37,4 +37,5 @@
     <a href="/">Back to Home</a>
  </p>
 </body>
+
 </html>
