--- a/Index.html/Index.html
+++ b/Index.html/Index.html
@@ -6,12 +6,12 @@
         <meta name="Description" content=" This page is my first page as a project to learn HTML.">
         <title> My First Web Page</title>
         <link rel="icon" href="HTML5_Logo_512.png" type="image/x-icon">
-        <link rel="stylesheet" href="main.css" type="text/css">
+        <link rel="stylesheet" href="css/main.css" type="text/css">
     </head>
 
     <body>
     <main>
-        <h1>My Goal for the Year</h1>
+        <h1>My Goal for The year</h1>
         <hr>
         
         <nav>
