--- a/Index.html/aboutme.html
+++ b/Index.html/aboutme.html
@@ -6,7 +6,7 @@
     <meta name="Descripption" content="Hi, I am David Calixte, and this is all about me.">
     <title>About me</title>
     <link rel="icon" href="HTML5_Logo_512.png" type="image/x-icon">
-    <link rel="stylesheet" href="main.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
  <h1>Hi, I am David, but you can call me Dave</h1>
@@ -37,5 +37,4 @@
     <a href="/">Back to Home</a>
  </p>
 </body>
-
 </html>
